--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "node-cache": "^5.1.2",
     "react": "^19.1.1",
